[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-recorder"
version = "1.0.0"
description = "A Flask-based video recording system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-CORS==6.0.2",
    "Werkzeug==3.1.3",
    "blinker==1.9.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "greenlet==3.5.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "SQLAlchemy==2.0.49",
    "typing_extensions==4.15.0",
]

[project.scripts]
video-recorder = "app:main"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"" = ["templates/*", "static/*"]